--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build-2": "BASE_PATH=./ npm run build-2",
+    "build": "next build && next export",
     "start": "next start",
     "export": "next export"
   },
